<resources>
    <!-- SIGN IN -->
    <string name="app_name">EGG_EM</string>
    <string name="sign_in">Sign in</string>
    <string name="email_label">email</string>
    <string name="password_label">password</string>

    <!-- DRAWER AND TOOLBAR -->
    <string name="txt_dashboard">Dashboard</string>
    <string name="user_profile">User Profile</string>
    <string name="test_history">Test History</string>
    <string name="site_management">Site Management</string>

    <!-- DASHBOARD -->
    <string name="welcome_message">Welcome %s </string>
    <string name="explanation_message">This is your emergency lighting dashboard. Below you can see test history. Navigate using the sidebar to manage your site, configure your tests and generate reports.</string>
    <string name="last_test">Last Test</string>

    <!-- SITE MANAGEMENT -->
    <string name="building">Building</string>
    <string name="your_sites">Your Sites</string>


    <!-- USER PROFILE -->
    <string name="profile">Profile</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="access_role">Access Role</string>

    <!-- PLACEHOLDERS FOR FORMAT -->
    <string name="string_placeholder">%s</string>



</resources>