<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/dashboardFragment">

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.example.egg_em.activities.fragments.DashboardFragment"
        android:label="@string/txt_dashboard"
        tools:layout="@layout/dashboard_fragment" />

    <fragment
        android:id="@+id/userProfileFragment"
        android:name="com.example.egg_em.activities.fragments.UserProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/user_profile_fragment" />

    <fragment
        android:id="@+id/testHistoryFragment"
        android:name="com.example.egg_em.activities.fragments.TestHistoryFragment"
        android:label="@string/test_history"
        tools:layout="@layout/test_history_fragment" />


</navigation>